1_scripts/1_stack_[Filebeat-ConfigMap-DaemonSet-ClusterRoleBinding-ClusterRole-ServiceAccount].yml

apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: filebeat
  namespace: default
  labels:
    app: filebeat
spec:
  selector:
    matchLabels:
      app: filebeat
  template:
    metadata:
      labels:
        app: filebeat
    spec:
      serviceAccountName: filebeat
      terminationGracePeriodSeconds: 30
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
      - name: filebeat
        image: elastic/filebeat:7.5.2
        args: [
          "-c", "/usr/share/filebeat/filebeat.yml",
          "-e",
        ]
        #VARIABLES DE ENTORNO: 
        securityContext:
          runAsUser: 0
          #DESCOMENTAR SI SE USA: 'Red Hat OpenShift':
          #privileged: true
        resources:
          limits:
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 100Mi
        volumeMounts:
        - name: config
          mountPath: /usr/share/filebeat/filebeat.yml 
          subPath: filebeat.yml
        - name: data
          mountPath: /usr/share/filebeat/data
        - name: varlibdockercontainers
          mountPath: /var/lib/docker/containers 
        - name: varlog
          mountPath: /app/log 
      volumes:
      - name: config
        configMap:
          defaultMode: 0600
          name: filebeat-config        
      - name: data
      - name: varlibdockercontainers
      - name: varlog
        #REFERENCIA VOLUMENES: 
        persistentVolumeClaim: 
          claimName: filebeat-pvc
