1_scripts/1_grafana-server_[Deployment-Service].yml

#[DEPLOYMENT-SERVICE]
#1_grafana-server_[Deployment-Service].yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-server
  namespace: default
  labels:
    app: microservicio-grafana-server
    role: backend
    stage: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservicio-grafana-server
      version: v1.0.0
  template:
    metadata:
      labels:
        app: microservicio-grafana-server
        version: v1.0.0
    spec:
      containers:
        - name: microservicio-grafana-server
          image: grafana/grafana:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: grafana-server
  namespace: default
  labels:
    app: microservicio-grafana-server
    role: backend
    stage: production
spec: 
  ports:
    - name: http
      port: 3000
  selector:
    app: microservicio-grafana-server
    version: v1.0.0
  type: NodePort
