1_scripts/1_zipkin-server_[Deployment-Service].yml

#[DEPLOYMENT-SERVICE]
#1_zipkin-server_[Deployment-Service].yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: zipkin-server
  namespace: default
  labels:
    app: microservicio-zipkin-server
    role: backend
    stage: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservicio-zipkin-server
      version: v1.0.0
  template:
    metadata:
      labels:
        app: microservicio-zipkin-server
        version: v1.0.0
    spec:
      containers:
        - name: microservicio-zipkin-server
          image: openzipkin/zipkin:latest
          #image: openzipkin/zipkin:2.12.9
          imagePullPolicy: Always
          ports:
            - containerPort: 9411

---

apiVersion: v1
kind: Service
metadata:
  name: zipkin-server
  namespace: default
  labels:
    app: microservicio-zipkin-server
    role: backend
    stage: production
spec: 
  ports:
    - name: http
      port: 9411
  selector:
    app: microservicio-zipkin-server
    version: v1.0.0
  type: NodePort
