1_scripts/2_boot-admin-server_[Deployment-Service].yml

#[SECRET-DEPLOYMENT-SERVICE]
#2_boot-admin-server_[Deployment-Service].yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: boot-admin-server
  namespace: default
  labels:
    app: microservicio-boot-admin-server
    role: backend
    stage: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservicio-boot-admin-server
      version: v1.0.0  
  template:
    metadata:
      labels:
        app: microservicio-boot-admin-server
        version: v1.0.0
    spec:
      containers:                  
        - name: microservicio-boot-admin-server
          image: maktup/boot-admin-server:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
 
apiVersion: v1
kind: Service
metadata:
  name: boot-admin-server
  namespace: default
  labels:
    app: microservicio-boot-admin-server
    role: backend
    stage: production
spec: 
  ports:
    - name: http
      port: 8080
  selector:
    app: microservicio-boot-admin-server
    version: v1.0.0
  type: NodePort
