1_scripts/2_utl-capadb-service_[Deployment-Service].yml

#[DEPLOYMENT-SERVICE]
#2_utl-capadb-service_[Deployment-Service].yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: utl-capadb-service
  namespace: default
  labels:
    app: microservicio-utl-capadb-service
    role: backend
    stage: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservicio-utl-capadb-service
      version: v1.0.0  
  template:
    metadata:
      labels:
        app: microservicio-utl-capadb-service
        version: v1.0.0
    spec:
      containers:                  
        - name: microservicio-utl-capadb-service
          image: maktup/utl-capadb:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          #--------------------------#  
          volumeMounts:
          - mountPath: /app/log
            name: volumen-logs 
      volumes:
        - name: volumen-logs 
          persistentVolumeClaim:
            claimName: microservicio-utl-capadb-pvc
          #--------------------------#  
---

apiVersion: v1
kind: Service
metadata:
  name: utl-capadb-service
  namespace: default
  labels:
    app: microservicio-utl-capadb-service
    role: backend
    stage: production
spec: 
  ports:
    - name: http
      port: 8080
  selector:
    app: microservicio-utl-capadb-service
    version: v1.0.0
  type: NodePort
